<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/effectlist"
    android:padding="3dp">

    <ImageView
        android:id="@+id/imageGolpes"
        android:layout_width="275dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:textAlignment="center"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/gedan_barai" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#FB0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="#711919"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.507" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>